SWITCHYARD-2456 improve integration test coverage for eap/wildfly distros